--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<title>Hextris</title>
+		<title>hextatic</title>
 		<meta name="description" content="An addictive puzzle game inspired by Tetris.">
 		<link rel="manifest" href="manifest.webmanifest">
 		<meta name="apple-itunes-app" content="app-id=903769553"/>
-		<meta name="apple-mobile-web-app-title" content="Hextris">
+		<meta name="apple-mobile-web-app-title" content="hextatic">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-120.png">
 		<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-152.png">
@@ -13,33 +13,30 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-180.png">
 		<link rel="apple-touch-icon" sizes="512x512" href="images/icons/apple-touch-512.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui"/>
-		<meta property="og:url" content="http://hextris.github.io/hextris/"/>
-		<meta property="og:site_name" content="Hextris"/>
-		<meta property="og:title" content="Hextris"/>
+		<meta property="og:url" content="http://vrahmanov.github.io/hextatic/"/>
+		<meta property="og:site_name" content="hextatic"/>
+		<meta property="og:title" content="hextatic"/>
 		<meta property="og:description" content="An addictive puzzle game inspired by Tetris."/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:author" content="https://www.facebook.com/hextris"/>
-		<meta property="og:image" content="http://hextris.github.io/hextris/images/facebook-opengraph.png"/>
-		<meta property="og:image:width" content="1200"/>
-		<meta property="og:image:height" content="630"/>
+		<!-- <meta property="og:author" content="https://www.facebook.com/hextris"/> -->
+		<!-- <meta property="og:image" content="http://hextris.github.io/hextris/images/facebook-opengraph.png"/> -->
+		<!-- <meta property="og:image:width" content="1200"/>
+		<meta property="og:image:height" content="630"/> -->
 		<meta property="twitter:card" content="summary"/>
-		<meta property="twitter:site" content="@hextris"/>
+		<meta property="twitter:site" content="@hextatic"/>
 		<meta property="twitter:site:id" content="2742209678"/>
-		<meta property="twitter:creator" content="@hextris"/>
+		<meta property="twitter:creator" content="@hextatic"/>
 		<meta property="twitter:creator:id" content="2742209678"/>
-		<meta property="twitter:domain" content="http://hextris.github.io"/>
-		<meta property="twitter:title" content="Hextris"/>
+		<meta property="twitter:domain" content="http://vrahmanov.github.io/hextatic/"/>
+		<meta property="twitter:title" content="hextatic"/>
 		<meta property="twitter:description" content="An addictive puzzle game inspired by Tetris."/>
-		<meta property="twitter:image:src" content="http://hextris.github.io/hextris/images/twitter-opengraph.png"/>
+		<meta property="twitter:image:src" content="http://vrahmanov.github.io/hextatic/images/twitter-opengraph.png"/>
 		<meta property="twitter:image:width" content="512"/>
 		<meta property="twitter:image:height" content="512"/>
 		<meta property="twitter:app:id:iphone" content="id903769553">
 		<meta property="twitter:app:id:ipad" content="id903769553">
 		<meta property="twitter:app:id:googleplay" content="com.hextris.hextris">
 		<meta property="twitter:app:country" content="us">
-		<meta property="twitter:app:url:iphone" content="itunes.apple.com/us/app/id903769553?mt=8">
-		<meta property="twitter:app:url:ipad" content="itunes.apple.com/us/app/id903769553?mt=8">
-		<meta property="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=com.hextris.hextris">
 		<link rel="icon" type="image/png" href="favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style/fa/css/font-awesome.min.css">
@@ -65,7 +62,6 @@
 		<script type='text/javascript' src="js/initialization.js"></script>
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
-		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
@@ -96,53 +92,12 @@
 			<div id='bottomContainer'>
 				<img id='restart' src='./images/btn_restart.svg' height='57px'>
 				<div id='socialShare'>
-					<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg width="224.6377px" height="57px"  viewBox="0 0 255 65" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-						<title>Share button</title>
-						<defs>
-						</defs>
-						<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-							<g id="Game-over-" sketch:type="MSArtboardGroup" transform="translate(-95.000000, -565.000000)">
-								<g id="Share-button" sketch:type="MSLayerGroup" transform="translate(95.000000, 565.000000)">
-								<a style="cursor:pointer;"class="popup" onclick="window.open('https://twitter.com/intent/tweet?text=Can you beat my score of '+ score +' points at&button_hashtag=hextris ? http://hextris.github.io/hextris @hextris','name','width=600,height=400')" ><polygon  id="Score-hex-2" fill="#3498DB" sketch:type="MSShapeGroup" transform="translate(127.661316, 32.500000) rotate(-90.000000) translate(-127.661316, -32.500000) " points="127.661316 -94.814636 160.137269 -76.064636 160.137269 141.064636 127.661317 159.814636 95.185364 141.064636 95.1853635 -76.064636 "></polygon></a>
-									<text style="cursor:pointer;"class="popup" onclick="window.open('https://twitter.com/intent/tweet?text=Can you beat my score of '+ score +' points at&button_hashtag=hextris ? http://hextris.github.io/hextris @hextris','name','width=600,height=400')" id="SHARE-MY-SCORE!" sketch:type="MSTextLayer" font-family="Exo" font-size="16" font-weight="420" fill="#FFFFFF">
-										<tspan x="67" y="39">SHARE MY SCORE!</tspan>
-									</text>
-								</g>
-							</g>
-						</g>
-					</svg>
+					<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 				</div>
 				<div id='buttonCont'>
 					<ul class="rrssb-buttons">
-						<li class="rrssb-facebook">
-							<a href='http://www.facebook.com/sharer.php?s=100
-								&p[url]=hextris.io' class="popup">
-								<span class="rrssb-icon">
-									<svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" width="29" height="29" viewBox="0 0 29 29">
-										<path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"
-										class="cls-2" fill-rule="evenodd"/>
-									</svg>
-								</span>
-								<span class="rrssb-text">facebook</span>
-							</a>
-						</li>
-						<li class="rrssb-twitter">
-							<a href="http://twitter.com/home?status=Play Hextris! - http://hextris.github.io/ #hextris"
-							class="popup">
-								<span class="rrssb-icon">
-									<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
-										<path d="M24.253 8.756C24.69 17.08 18.297 24.182 9.97 24.62c-3.122.162-6.22-.646-8.86-2.32 2.702.18 5.375-.648 7.507-2.32-2.072-.248-3.818-1.662-4.49-3.64.802.13 1.62.077 2.4-.154-2.482-.466-4.312-2.586-4.412-5.11.688.276 1.426.408 2.168.387-2.135-1.65-2.73-4.62-1.394-6.965C5.574 7.816 9.54 9.84 13.802 10.07c-.842-2.738.694-5.64 3.434-6.48 2.018-.624 4.212.043 5.546 1.682 1.186-.213 2.318-.662 3.33-1.317-.386 1.256-1.248 2.312-2.4 2.942 1.048-.106 2.07-.394 3.02-.85-.458 1.182-1.343 2.15-2.48 2.71z"
-										/>
-									</svg>
-								</span>
-								<span class="rrssb-text">twitter</span>
-							</a>
-						</li>
 				</ul>
 					<div id='badges'>
-						<a href="https://play.google.com/store/apps/details?id=com.hextris.hextris" ><img id='androidBadge' src='images/android.png'/></a>
-						<a href ="https://itunes.apple.com/us/app/hextris/id903769553?mt=8"><img id='iOSBadge'  src='images/appstore.svg'/></a>
 					</div>
 				</div>
 			</div>
